Custom Marker Added and InfoWindow Added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
    <application
         android:label="procto_proj"
         android:name="${applicationName}"
+       android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
+
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyDPmnInnsiuwRdBbmERPzSswkfXbu9eBkM"/>
         <activity
